# AIRBOT-PLAY-Hardware

./: LICENSE  README.md
airbot_hardware/: parser.hpp  utils.hpp  version.hpp.in
airbot_hardware/comm/: comm.hpp
airbot_hardware/executors/: executor.hpp
airbot_hardware/handlers/: arm.hpp  chassis.hpp  eef.hpp  gpio.hpp  motor.hpp
airbot_hardware/handlers/brain_co/: brain_co_hand.hpp  datatypes.hpp
airbot_hardware/handlers/datatypes/: hand.hpp
airbot_hardware/handlers/hand/: ins_hand.hpp
airbot_hardware/handlers/ro_hand/: ro_hand.hpp
example/cpp/: CMakeLists.txt
example/cpp/src/: argparse.cpp  bipl.cpp  eipl.cpp  free_drive.cpp
example/cpp/src/athena/: revolve.cpp  tok2.cpp
example/cpp/src/comm/: keyboard.cpp  modbus_rtu.cpp  serial.cpp  tty.cpp
example/cpp/src/hand/: set_hand_angles.cpp
example/cpp/src/hardware/arm/: 1f1.cpp  free_drive.cpp  free_drive_and_plot.cpp  free_drive_replay.cpp  get_params.cpp  kbd_ctrl.cpp  return_zero.cpp  swing_and_plot.cpp
example/cpp/src/hardware/eef/: E2.cpp  G2.cpp
example/cpp/src/hardware/hand/: airbot_brain_co_hand_ctrl.cpp  airbot_brain_co_hand_greeting.cpp  airbot_brain_co_hand_pose.cpp  airbot_ro_hand_pose.cpp  airbot_rohand_arm_debug.cpp  hand_example.hpp
example/cpp/src/product/: 1f1.cpp  brain_co_hand_ctrl.cpp  brain_co_hand_greeting.cpp  brain_co_hand_pose.cpp  e2.cpp  g2_force.cpp  g2_pos_ctrl.cpp  g2_pos_swing.cpp  ins_hand_ctrl.cpp  ins_hand_greeting.cpp  ins_hand_pose.cpp  play_kbd_ctrl_1.cpp  play_mit_free_drive.cpp  play_mit_swing.cpp  play_pos_ctrl.cpp  play_pos_show.cpp  play_return_zero.cpp  replay.cpp  ro_hand_ctrl.cpp  ro_hand_greeting.cpp  ro_hand_pose.cpp
example/cpp/src/tok2/: receiver.cpp  sender.cpp
example/python/: 1f1.py  bipl.py  free_drive.py  receiver.py  swing.py  version.py
example/python/hardware/arm/: e2.py  free_drive.py  kbd_ctrl.py  return_zero.py
example/python/hardware/brain_co_hand/: example_brain_co_hand.py
example/python/hardware/hand/: example_hand.py
example/python/hardware/ro_hand/: example_ro_hand.py
example/python/product/: 1f1.py  brain_co_hand_ctrl.py  e2.py  g2_force.py  g2_pos_ctrl.py  ins_hand_ctrl.py  play_mit_free_drive.py  play_mit_swing.py  play_pos_ctrl.py  play_return_zero.py  replay.py  ro_hand_ctrl.py
example/ros2/src/airbot_hardware_ros2/: CMakeLists.txt  package.xml
example/ros2/src/airbot_hardware_ros2/src/: E2.cpp  G2.cpp  play_free_drive.cpp  play_pos_ctrl.cpp  play_pos_ctrl_mit.cpp  play_pos_ctrl_with_e2.cpp  play_pos_ctrl_with_g2.cpp  replay.cpp
